--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>All Health App</title>
+    <title>All Health Appzz</title>
     
-    <base href="/" />
+    <base href="./" />
     
     <meta name="color-scheme" content="light dark" />
     <meta
