--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>All Health Appzz</title>
+    <title>All Health App</title>
     
     <base href="./financial/" />
     
