--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>All Health App</title>
     
-    <base href="./financial/" />
+    <base href="./" />
     
     <meta name="color-scheme" content="light dark" />
     <meta
